Bug 52040 - [SNB IVB regression]Call trace appears when nightly testing run piglit cases
Summary: [SNB IVB regression]Call trace appears when nightly testing run piglit cases
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high major
Assignee: Daniel Vetter
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-13 07:47 UTC by lu hua
Modified: 2017-10-06 14:48 UTC (History)
6 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (75.59 KB, text/plain)
2012-07-13 07:47 UTC, lu hua
no flags Details
Remove the defunct flushing list (23.54 KB, patch)
2012-07-13 08:03 UTC, Chris Wilson
no flags Details | Splinter Review
Remove the defunct flushing list (v2) (38.29 KB, patch)
2012-07-13 11:57 UTC, Chris Wilson
no flags Details | Splinter Review

Description lu hua 2012-07-13 07:47:32 UTC
Created attachment 64163 [details]
dmesg

System Environment:
--------------------------
Arch:           x86_64
Platform:       Ivybridge
Libdrm:		(master)libdrm-2.4.37-2-g881e69f185d2450ca35964caf254b04e7e8838c1
Mesa:		(master)33202b4876a88b6f54ca7022eadd2875a2d3508a
Xserver:(master)xorg-server-1.12.0-233-gdae317e7265007b38012244722e3b3a06e904ed5
Libva:		(staging)f12f80371fb534e6bbf248586b3c17c298a31f4e
Libva_intel_driver:(staging)82fa52510a37ab645daaa3bb7091ff5096a20d0b
Kernel:	(drm-intel-next-queued) 127b87d76a345166840e2fbbb2c7501dd388e16b

Bug detailed description:
-------------------------
When nightly testing run piglit cases, call trace appears in dmesg.
It happens on ivybridge and sandybrigde with drm-intel-next-queued kernel. It doesn't happen on drm-intel-fixes kernel.

Call Trace:
[ 5791.888795]  [<ffffffffa009b8b2>] i915_gem_object_wait_rendering+0x34/0x51 [i915]
[ 5791.888839]  [<ffffffff811fa2e6>] ? list_del+0xe/0x2e
[ 5791.888874]  [<ffffffffa009c417>] i915_gem_object_finish_gpu+0x39/0x45 [i915]
[ 5791.888920]  [<ffffffffa009c718>] i915_gem_object_unbind+0x45/0x19f [i915]
[ 5791.888965]  [<ffffffffa009f73a>] i915_gem_evict_something+0x277/0x2c0 [i915]
[ 5791.889011]  [<ffffffffa009a682>] i915_gem_object_bind_to_gtt+0x1e0/0x38c [i915]
[ 5791.889058]  [<ffffffffa009cad3>] i915_gem_fault+0xd4/0x1ee [i915]
[ 5791.889095]  [<ffffffff810cb444>] __do_fault+0xa7/0x3bb
[ 5791.889126]  [<ffffffff810cd973>] handle_pte_fault+0x28f/0x6b9
[ 5791.889159]  [<ffffffff810cee29>] handle_mm_fault+0x196/0x1ab
[ 5791.889192]  [<ffffffff813cb17d>] do_page_fault+0x3ad/0x3d2
[ 5791.889225]  [<ffffffff810fac14>] ? do_vfs_ioctl+0x444/0x485
[ 5791.889258]  [<ffffffff810c6918>] ? vm_mmap_pgoff+0x78/0x8b
[ 5791.889290]  [<ffffffff813c862f>] page_fault+0x1f/0x30
[ 5791.889339] Code: 38 5b 41 5c 41 5d 41 5e 41 5f 5d c3 55 85 f6 48 89 e5 41 55 41 54 41 89 f4 53 48 89 fb 51 48 8b 47 18 4c 8b a8 48 03 00 00 75 02 <0f> 0b 41 0f b6 b5 20 28 00 00 4c 89 ef e8 a2 f4 ff ff 85 c0 75
[ 5791.889445] RIP  [<ffffffffa009b83c>] i915_wait_seqno+0x1f/0x61 [i915]
[ 5791.889481]  RSP <ffff8800a3c31ab8>
Comment 1 Chris Wilson 2012-07-13 08:01:15 UTC
Looks to be the same flushing list removal issue I encountered. Patches posted to list. Will attach squashed version shortly.
Comment 2 Chris Wilson 2012-07-13 08:03:37 UTC
Created attachment 64164 [details] [review]
Remove the defunct flushing list
Comment 3 Chris Wilson 2012-07-13 11:57:49 UTC
Created attachment 64168 [details] [review]
Remove the defunct flushing list (v2)
Comment 4 Daniel Vetter 2012-07-14 13:34:58 UTC
Should be mostly fixed with

commit b0e5586160189327221725fe99ee1844efc14907
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Jul 13 14:14:08 2012 +0100

    drm/i915: Insert a flush between batches if the breadcrumb was dropped

Please report back if you still have such issues with running piglit on latest -queued.
Comment 5 lu hua 2012-07-16 05:02:29 UTC
It still happens on -queued kernel commit:06b863619d431f39269b
Comment 6 Chris Wilson 2012-07-16 06:31:35 UTC
Second guess: this is the context blow up.
Comment 7 Daniel Vetter 2012-07-17 09:28:23 UTC
This should be fixed on latest dinq with

commit de72b43f3691fe6949694c8ffb282467a9b67f87
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Sun Jul 15 12:34:22 2012 +0100

    drm/i915: Flush the context object from the CPU caches upon switching
Comment 8 lu hua 2012-07-23 07:01:32 UTC
Verified. It has been fixed on -queued kernel commit b17a616d43882fe1.
Comment 9 Florian Mickler 2012-08-05 11:19:25 UTC
A patch referencing this bug report has been merged in Linux v3.6-rc1:

commit 09cf7c9a1299c386525d31305fd50591acf49a9a
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Fri Jul 13 14:14:08 2012 +0100

    drm/i915: Insert a flush between batches if the breadcrumb was dropped
Comment 10 Elizabeth 2017-10-06 14:48:57 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.